fix view and add n:m, 1:n relations on views and models

--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -5,13 +5,16 @@ p
   = @article.title
 p
   strong Description:
-  = @article.description
+  = index_description @article
 p
   strong Target amount:
   = @article.target_amount
 p
   strong Closed at:
   = @article.closed_at
+p
+  strong Innovators:
+  = self_innovator_list @article
 
 = link_to 'Edit', edit_article_path(@article)
 '|
