--- a/app/views/articles/_form.html.slim
+++ b/app/views/articles/_form.html.slim
@@ -16,6 +16,9 @@
     = f.label :target_amount
     = f.number_field :target_amount
   .field
+    = f.label :innovator_ids
+    = f.select :innovator_ids, @innovator_list, {}, {multiple: true}
+  .field
     = f.label :closed_at
-    = f.datetime_select :closed_at
+    = f.date_select :closed_at
   .actions = f.submit
