--- a/app/views/articles/index.html.slim
+++ b/app/views/articles/index.html.slim
@@ -7,6 +7,7 @@ table
       th Description
       th Target amount
       th Closed at
+      th Innovators
       th
       th
       th
@@ -15,9 +16,10 @@ table
     - @articles.each do |article|
       tr
         td = article.title
-        td = article.description
-        td = article.target_amount
+        td = index_description article
+        td = number_to_currency article.target_amount
         td = article.closed_at
+        td = self_innovator_list article
         td = link_to 'Show', article
         td = link_to 'Edit', edit_article_path(article)
         td = link_to 'Destroy', article, data: {:confirm => 'Are you sure?'}, :method => :delete
