--- a/app/views/innovators/_form.html.slim
+++ b/app/views/innovators/_form.html.slim
@@ -1,3 +1,6 @@
+- end_year = Time.current.year
+- start_year = end_year - 100
+
 = form_for @innovator do |f|
   - if @innovator.errors.any?
     #error_explanation
@@ -14,10 +17,13 @@
     = f.text_field :email
   .field
     = f.label :password
-    = f.text_field :password
+    = f.password_field :password
+  .field
+    = f.label :password_confirmation
+    = f.password_field :password_confirmation
   .field
     = f.label :birth
-    = f.date_select :birth
+    = f.date_select :birth, start_year: start_year, end_year: end_year
   .field
     = f.label :description
     = f.text_area :description
