--- a/app/views/investors/_form.html.slim
+++ b/app/views/investors/_form.html.slim
@@ -1,3 +1,6 @@
+- end_year = Time.current.year
+- start_year = end_year - 100
+
 = form_for @investor do |f|
   - if @investor.errors.any?
     #error_explanation
@@ -11,11 +14,14 @@
     = f.text_field :name
   .field
     = f.label :email
-    = f.text_field :email
+    = f.email_field :email
   .field
     = f.label :password
-    = f.text_field :password
+    = f.password_field :password
+  .field
+    = f.label :password_confirmation
+    = f.password_field :password_confirmation
   .field
     = f.label :birth
-    = f.date_select :birth
+    = f.date_select :birth, start_year: start_year, end_year: end_year
   .actions = f.submit
