--- a/app/views/tickets/_form.html.slim
+++ b/app/views/tickets/_form.html.slim
@@ -8,7 +8,7 @@
 
   .field
     = f.label :article_id
-    = f.number_field :article_id
+    = f.select :article_id, @article_list
   .field
     = f.label :price
     = f.number_field :price
