fix bootstrap css

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -51,23 +51,23 @@
 @brand-info:            #369;
 @brand-warning:         #F5E625;
 @brand-danger:          #F57A00;
+@text-color:            #000000;
 
-
-//== Scaffolding
+// //== Scaffolding
+// //
+// //## Settings for some of the most global styles.
 //
-//## Settings for some of the most global styles.
-
-//** Background color for `<body>`.
-@body-bg:               #fff;
-//** Global text color on `<body>`.
-@text-color:            @gray;
-
-//** Global textual link color.
-@link-color:            @brand-primary;
-//** Link hover color set via `darken()` function.
-@link-hover-color:      darken(@link-color, 15%);
-//** Link hover decoration.
-@link-hover-decoration: underline;
+// //** Background color for `<body>`.
+// @body-bg:               #fff;
+// //** Global text color on `<body>`.
+// @text-color:            @gray;
+//
+// //** Global textual link color.
+// @link-color:            @brand-primary;
+// //** Link hover color set via `darken()` function.
+// @link-hover-color:      darken(@link-color, 15%);
+// //** Link hover decoration.
+// @link-hover-decoration: underline;
 
 
 //== Typography
