--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,19 +15,41 @@ html lang="en"
     = favicon_link_tag 'apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114'
     = favicon_link_tag 'apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72'
     = favicon_link_tag 'apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png'
-    = favicon_link_tag 'favicon.ico', :rel => 'shortcut icon'
+    / = favicon_link_tag 'favicon.ico', :rel => 'shortcut icon'
     = javascript_include_tag "application"
 
 
 
   body
-    .navbar.navbar-static-top
+    .navbar.navbar-default.navbar-static-top
         .container
-          button.navbar-toggle type="button" data-toggle="collapse" data-target=".navbar-responsive-collapse"
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-          a.navbar-brand href="#"Strugeon
+          .navbar-header
+            a.navbar-brand href="#" Strugeon
+            button.navbar-toggle type="button" data-toggle="collapse" data-target=".navbar-responsive-collapse"
+              span.icon-bar
+              span.icon-bar
+              span.icon-bar
+          #navbar-main.navbar-collapse.collapse
+            ul.nav.navbar-nav
+              li.dropdown
+                a#themes.dropdown-toggle href="#" data-toggle="dropdown" aria-expanded="true"
+                  | Dropdown
+                  span.caret
+                ul.dropdown-menu aria-labelledby="themes"
+                  li
+                    a href="#1" 睦月
+                  li
+                    a href="#2" 如月
+                  li
+                    a href="#3" 弥生
+                  li
+                    a href="#4" 卯月
+              li
+                a href="#link" link
+            form.navbar-form.navbar-left role="search"
+              div.form-group
+                input.form-control type="text" placeholder="search"
+              button.btn.btn-default type="submit" Submit
           .nav-collapse.collapse.navbar-responsive-collapse
             ul.nav.navbar-nav
               li= link_to "Link 1", "/path1"
