--- a/app/views/innovators/index.html.slim
+++ b/app/views/innovators/index.html.slim
@@ -19,7 +19,7 @@ table
         td = innovator.name
         td = innovator.email
         td = innovator.birth
-        td = index_description innovator
+        td = trancate_description innovator
         td = innovator.url
         td = self_article_list innovator
         td = link_to 'Show', innovator
