--- a/app/views/articles/index.html.slim
+++ b/app/views/articles/index.html.slim
@@ -3,11 +3,11 @@
 h1 Listing articles
 
 div.grid
-  - @articles.each do |article|
-    - 12.times do |i|
+  - 4.times do |i|
+    - @articles.each do |article|
       div.elem-root.grid-item
         span
-          = image_tag "/images/firewood_on_forest.gif", class: "elem-img"
+          = image_tag image_path(article.image), class: "elem-img"
         span = article.title
         div.elem-bar
         span = trancate_description article.description, 45
@@ -18,7 +18,6 @@ div.grid
           = link_to 'Show', article, class: "btn btn-success"
           = link_to 'Edit', edit_article_path(article), class: "btn btn-info"
           = link_to 'Destroy', article, data: {:confirm => 'Are you sure?'}, :method => :delete, class: "btn btn-danger"
-
 
 br
 
