fix helper method argument

--- a/app/views/innovators/show.html.slim
+++ b/app/views/innovators/show.html.slim
@@ -17,7 +17,7 @@ p
   = @innovator.url
   p
     strong Articles:
-    = trancate_description @innovator
+    = trancate_description @innovator.description
 
 = link_to 'Edit', edit_innovator_path(@innovator)
 '|
