--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -5,7 +5,7 @@ p
   = @article.title
 p
   strong Description:
-  = trancate_description @article
+  = trancate_description @article.description
 p
   strong Target amount:
   = @article.target_amount
