--- a/app/views/front_runners/_form.html.slim
+++ b/app/views/front_runners/_form.html.slim
@@ -13,12 +13,12 @@
     = f.label :email
     = f.text_field :email
   .field
-    = f.label :password_digest
-    = f.text_field :password_digest
+    = f.label :password
+    = f.password_field :password
+  .field
+    = f.label :password_confirmation
+    = f.password_field :password_confirmation
   .field
     = f.label :description
     = f.text_area :description
-  .field
-    = f.label :aasm_state
-    = f.text_field :aasm_state
   .actions = f.submit
