--- a/app/views/front_runners/registrations/edit.html.slim
+++ b/app/views/front_runners/registrations/edit.html.slim
@@ -4,6 +4,10 @@ h2
 = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
   = devise_error_messages!
   .field
+    = f.label :name
+    br
+    = f.text_field :name, autofocus: true
+  .field
     = f.label :email
     br
     = f.email_field :email, autofocus: true
@@ -27,6 +31,10 @@ h2
       | (we need your current password to confirm your changes)
     br
     = f.password_field :current_password, autocomplete: "off"
+  .field
+    = f.label :description
+    br
+    = f.text_area :description
   .actions
     = f.submit "Update"
 h3
