--- a/app/views/front_runners/registrations/new.html.slim
+++ b/app/views/front_runners/registrations/new.html.slim
@@ -3,6 +3,10 @@ h2
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = devise_error_messages!
   .field
+    = f.label :name
+    br
+    = f.text_field :name, autofocus: true
+  .field
     = f.label :email
     br
     = f.email_field :email, autofocus: true
@@ -19,6 +23,11 @@ h2
     = f.label :password_confirmation
     br
     = f.password_field :password_confirmation, autocomplete: "off"
+  .field
+    = f.label :description
+    br
+    = f.text_area :description
+
   .actions
     = f.submit "Sign up"
 = render "front_runners/shared/links"
